--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
-
+/* Styling Header background */
 header {
     background-image: linear-gradient(rgba(25, 1, 243, 0.79) 0%,
             rgba(19, 155, 189, 0.471) 100%);
@@ -40,7 +40,7 @@ body {
     background-color: linen;
 
 }
-
+/* Quiz start section of initial page */
 .quiz-start {
     font-size: 26px;
     text-align: center;
@@ -49,7 +49,9 @@ body {
     margin-top:50px;
 }
 
+/* Styling the start button */
 .start-button {
+    cursor:pointer;
     width: 100px;
     background-color:rgb(53, 32, 32);
     color:white;
@@ -60,6 +62,7 @@ body {
     font-size: 20px;
 }
 
+/* Question style and positioning  */
 .quiz-questions {
     display: none;
     text-align:center;
@@ -78,7 +81,7 @@ body {
     background: rgba(243, 1, 1, 0.79);
     font-size: 20px;
 }
-
+/* Transform question choices on hovver and give the box a shadow */
 .question-choice:hover {
     cursor: pointer;
     box-shadow: 0 0.4rem 1.4rem 0 rgba(172, 15, 138, 0.79);
@@ -86,6 +89,7 @@ body {
     transform: transform 100ms;
 }
 
+/* hides initial submit section until time is up or questions have all been answered */
 .submit-score {
     display: none;
 }
@@ -95,4 +99,21 @@ form {
     text-align: center;
     padding: 20px;
     font-size: 24px;
+}
+
+/* Add media screens for responsive design */
+@media screen and (max-width:992px) {
+    body {
+      width: 50%;
+    }
+
+   
+  }
+
+  
+  @media screen and (max-width:768px) {
+    body {
+      width: 100%;
+    }
+
 }
